Update copyright color to avoid low contrast.

--- a/src/public/styles/modules/sections/central-section.css
+++ b/src/public/styles/modules/sections/central-section.css
@@ -34,7 +34,7 @@
 	position: relative;
 	gap: 30px;
 	font-weight: 300;
-	color: #BEBEBE;
+	color: #949494;
 	height: 94px;
 }
 
